Update: Deleted Resume link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- <img class="h2" src="./images/upBrattican-mtnarw.png" alt="SigEp Home Page Logo"> -->
             <div class="landing-page-btns">
                 <a href="./about.html" id="changeScholarshipButton" class="btn">About</a>
-                <a href="https://brattican.shop/" target="_blank" rel="noopener noreferrer" id="changeShopButton" class="btn">Resume</a>
+                <a href="" target="_blank" rel="noopener noreferrer" id="changeShopButton" class="btn">Resume</a>
                 <a href="./projects.html" id="changeServicesButton" class="btn">Projects</a>
             </div>
         </div>
