Update: Edited links

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- <img class="h2" src="./images/upBrattican-mtnarw.png" alt="SigEp Home Page Logo"> -->
             <div class="landing-page-btns">
                 <a href="./about.html" id="changeScholarshipButton" class="btn">About</a>
-                <a href="" target="_blank" rel="noopener noreferrer" id="changeShopButton" class="btn">Resume</a>
+                <a href="https://www.linkedin.com/in/thomas-caneday-323973259" target="_blank" rel="noopener noreferrer" id="changeShopButton" class="btn">Resume</a>
                 <a href="./projects.html" id="changeServicesButton" class="btn">Projects</a>
             </div>
         </div>
@@ -121,11 +121,11 @@
     <footer>
         <div class="socials">
             <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" title="Facebook"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com/usdsigep" target="_blank" rel="noopener noreferrer" title="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" title="Instagram"><i class="fab fa-instagram"></i></a>
             <a href="https://www.tiktok.com/" target="_blank" rel="noopener noreferrer" title="TikTok"><i class="fab fa-tiktok"></i></a>
             <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer" title="YouTube"><i class="fab fa-youtube"></i></a>
         </div>
-        <p>Copyright &copy; 2024 USD SigEp. All rights reserved.</p>
+        <p>Copyright &copy; 2024 Thomas Caneday. All rights reserved.</p>
         <p class="powered">Powered by <a href="https://thomascaneday.com/" target="_blank" rel="noopener noreferrer">Thomas Caneday Websites</a></p>
     </footer>
 </div>
