--- a/about.html
+++ b/about.html
@@ -43,8 +43,10 @@
     <section id="founder">
         <div class="founder-overlay">
             <h3>Hello!</h3>
-            <p>Thomas Caneday is a dedicated Computer Science student at the University of San Diego, passionate about software development and programming. With a keen interest in creating innovative software solutions, Thomas is constantly expanding his skills and knowledge in the field. His enthusiasm for programming is evident in his commitment to learning and applying new technologies to solve complex problems.</p>
-            <p>Thomas is also known for his creative problem-solving abilities and his eagerness to collaborate with others on challenging projects.</p>
+            <p>My name is Thomas Caneday. I am a dedicated Computer Science student at the University of San Diego, passionate about software development and programming. With a keen interest in creating innovative software solutions, I am constantly expanding my skills and knowledge in the field. My enthusiasm for programming is evident in my commitment to learning and applying new technologies to solve complex problems.</p>
+            <p>As you dive deeper into my website, you will see that I am eager to collaborate with others and share my knowledge and skills with others. Be sure to check out my past and current projects!</p>
+            <p>My favorite courses so far in my college career have been focused around website development, statistics, and data science.</p>
+            <p>Aside from being a Computer Science student, I also work professionally with business owners to provide them with aesthetic, responsive, and SEO-efficient websites. If you or someone you know is in need of a website, be sure to reach out!<p>
             <!-- <p>I have decided to start my own small business in hopes to put a scholarship together for a trade school student, and do blue collar giveaways to future trade students. I was fortunate enough to receive the Mike Rowe Works scholarship while I was in lineman school along with many other scholarships and because of how much it helped me, I want to give that opportunity to someone else!</p> -->
             <!-- <div class="founder-overlay"></div>
             <h3>Founder</h3>
