--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <ul class="dropdown">
             <!-- <li><a href="./services.html">Services</a></li> -->
             <li><a href="./about.html">About</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="mailto:someone@example.com">Contact</a></li>
             <!-- <li><a href="./ambassadors.html">Ambassadors</a></li> -->
           </ul>
         </nav>
