--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
     <section id="founder">
         <div class="founder-overlay">
             <h3>My Resume</h3>
-            <iframe class="pdf" src="/images/"></iframe>
+            <iframe class="pdf" src="/images/Thomas's LinkedIn Resume May 2024.pdf"></iframe>
         </div>
         
         
