--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- <img class="h2" src="./images/upBrattican-mtnarw.png" alt="SigEp Home Page Logo"> -->
             <div class="landing-page-btns">
                 <a href="./about.html" id="changeScholarshipButton" class="btn">About</a>
-                <a href="https://www.linkedin.com/in/thomas-caneday-323973259" target="_blank" rel="noopener noreferrer" id="changeShopButton" class="btn">Resume</a>
+                <a href="./resume.html" target="_blank" rel="noopener noreferrer" id="changeShopButton" class="btn">Resume</a>
                 <a href="./projects.html" id="changeServicesButton" class="btn">Projects</a>
             </div>
         </div>
