Update: Added new Sockets project card

--- a/projects.html
+++ b/projects.html
@@ -132,6 +132,17 @@
                 </p>
             </div>
         </div>
+        <div class="screen" id="nine">
+            <div class="screen-overlay">
+                <a href="https://github.com/ThomasCaneday/RockPaperScissorsApp" target="_blank" rel="noreferrer noopener">New Sockets Messager</a>
+                <p>
+                    Updated my two-way communication app that allows two devices to message each other while connected to each other.
+                </p>
+                <p>
+                    Used: Java
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
