Add: Added a link and description for the Sockets Communication app project

--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Agdasima&family=Silkscreen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <title>How It Works | Thomas Caneday</title>
+    <title>Projects</title>
 </head>
 <body>
     <div class="header">
@@ -88,7 +88,7 @@
                 </p>
             </div>
         </div>
-        <div class="screen" id="five">
+        <!-- <div class="screen" id="five">
             <div class="screen-overlay">
                 <a href="https://github.com/ThomasCaneday/Sockets" target="_blank" rel="noreferrer noopener">Sockets</a>
                 <p>
@@ -98,7 +98,7 @@
                     Used: Java
                 </p>
             </div>
-        </div>
+        </div> -->
         <div class="screen" id="six">
             <div class="screen-overlay">
                 <a href="https://github.com/ThomasCaneday/Merkle Madness" target="_blank" rel="noreferrer noopener">Merkle Madness</a>
@@ -134,9 +134,9 @@
         </div>
         <div class="screen" id="nine">
             <div class="screen-overlay">
-                <a href="https://github.com/ThomasCaneday/RockPaperScissorsApp" target="_blank" rel="noreferrer noopener">New Sockets Messager</a>
+                <a href="https://github.com/ThomasCaneday/Communication-App" target="_blank" rel="noreferrer noopener">Sockets Communication App</a>
                 <p>
-                    Updated my two-way communication app that allows two devices to message each other while connected to each other.
+                    Constructed a two-way communication app that allows two clients to message simultaneously while connected to each other, demonstrating proficiency in system architecture and networking.
                 </p>
                 <p>
                     Used: Java
