Fix: changed uml to embed tag

--- a/transport.html
+++ b/transport.html
@@ -1,6 +1,6 @@
 <!DOCTYPE>
 <html>
-  <img src="/images/UML.pdf" alt="UML Diagram">
+  <embed src="./images/UML.pdf" alt="UML Diagram"/>
   <h2>Vehicle Routing Simulator</h2>
   <p>
     We decided to build this project because of the complexity of routing systems. In my 480 class, we have gone over routing algorithms, so developing a program that related was intriguing.
