Add: Added a GitHub link to transport page

--- a/transport.html
+++ b/transport.html
@@ -16,4 +16,5 @@
   <p>
     Originally, we had chosen a different project that I had developed most of the logic for in a communication app. Then, we switched to this project and ended up developing most of the tests and reviewing the resulting classes from test-driven development. I was also involved in creating the UML diagram to help structure the program.
   </p>
+  <a href="https://github.com/usd-cs/comp305-final-project-sp24-s01s02-teamsocket" target="_blank" rel="noopener noreferrer">GitHub Link</a>
 </html>
