Add: Added a better description for the program

--- a/transport.html
+++ b/transport.html
@@ -3,6 +3,9 @@
   <embed src="./images/UML.pdf" alt="UML Diagram"/>
   <h2>Vehicle Routing Simulator</h2>
   <p>
+    The Vehicle Routing Simulation is a versatile simulator designed to handle multiple modes of transportation under various conditions. Whether you want to route a bike through the countryside carrying 300 lbs of gear or a semi through urban traffic, this simulator can help model the best path based on a multitude of variables.
+  </p>
+  <p>
     We decided to build this project because of the complexity of routing systems. In my 480 class, we have gone over routing algorithms, so developing a program that related was intriguing.
     There are routing problems in everyday life with trucking and delivery systems. Making a system that helped solve these issues within a simulator seemed like a good test. This project put my Java skills to the test.
   </p>
